basic code base

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       data-rh="true"
-      property="og:image"
+      article="og:image"
       content="https://refine.dev/img/refine_social_new.png"
     />
     <meta
