--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,11 @@
       refine - Build your React-based CRUD applications, without constraints.
     </title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6lj62kXngxImCkwIDQT91rbiRGyZ6Auo"
+    async
+    defer
+  ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
